# sparque

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml
src/sparque/: cluster.py  dcbc.py  fc_homogeneity.py  func_conn.py  parcellation_dict.py  reliability.py  sparque.py  svc.py  utils.py
src/sparque/DCBC/: LICENSE  compute_similarity.py  plotting.py
tests/: test_reliability.py
